--- a/src/components/header/Header.module.css
+++ b/src/components/header/Header.module.css
@@ -2,8 +2,8 @@
     height: 250px;
     display: flex;
     flex-direction: column;
-    justify-content: space-evenly;
     align-items: center;
+    justify-content: space-evenly;
 }
 
 .header::after {
@@ -22,4 +22,11 @@
     margin: 0;
     color: rgba(255, 255, 255, 0.77);
     text-transform: uppercase;
+}
+
+.form {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
 }
